--- a/src/index.html
+++ b/src/index.html
@@ -14,5 +14,7 @@
       <div class="emoji mb-6">💣🤯💥</div>
       <button class="button">Boom?</button>
     </div>
+    <div class="container">
+    </div>
   </body>
 </html>
